test/classes/initializers/errors/generic-lhsConsRhsInit.good
generic-lhsConsRhsInit.chpl:20: error: type mismatch in assignment from hasInit to hasConstruct(int(64))
